--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+
   
 
   
@@ -76,31 +77,14 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="courses.html">Iniciar Sesion</a>
+      <a class="btn-getstarted" href="" data-bs-toggle="modal" data-bs-target="#exampleModal">Iniciar Sesion</a>
 
     </div>
   </header>
 
 
 
-<!-- Modal
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div> -->
+
 
   <main class="main">
 
@@ -121,28 +105,35 @@
     </section><!-- /Hero Section -->
 
     
-<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button> -->
+    <!-- inicio modal -->
 
-<!-- Modal -->
-<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="color: white;">
+  <div class="modal-dialog" >
+    <div class="modal-content" style="background-color: #000; border-color: #73733c;">
+      <div class="modal-header" style="border-color: #73733c;" >
+        <h1 class="modal-title fs-5" id="exampleModalLabel" style="color: white;">Iniciar Sesion</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="background-color: #73733c;"></button>
       </div>
-      <div class="modal-body">
-        ljkfhgkjasgfhjfkhasdlkfhsakjf
+      <div class="modal-body" >
+        <form>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Usuario</label>
+            <input type="text" class="form-control" id="recipient-name" style="background-color: black;border-color: #73733c; color: white;">
+          </div>
+          <div class="mb-3">
+            <label for="message-text" class="col-form-label">Contraseña:</label>
+            <input type="password" class="form-control" id="recipient-name" style="background-color: black;border-color: #73733c; color: white;">
+          </div>
+        </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+      <div class="modal-footer" style="border-color: #73733c;">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="Inicio">Iniciar secion</button>
+        
       </div>
     </div>
   </div>
-</div> -->
+</div>
+    <!-- fin modal -->
 
 
     <!-- QUIENES SOMOS Section -->
