--- a/PaginaForo.html
+++ b/PaginaForo.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Secion</title>
+    <title>Foros lifeContinuum</title>
 </head>
 <body>
+    <h1>Foross</h1>
     
 </body>
 </html>
