--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
         </form>
       </div>
       <div class="modal-footer" style="border-color: #73733c;">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="Inicio">Iniciar secion</button>
+        
+        <button type="button" class="btn btn-primary" id="Inicio" style="border-color: #73733c;">Iniciar Secion</button>
         
       </div>
     </div>
