--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
       <div class="modal-footer" style="border-color: #73733c;">
         
-        <button type="button" class="btn btn-primary" id="Inicio" style="border-color: #73733c;">Iniciar Secion</button>
+        <button type="button" class="btn btn-primary"  id="Inicio" style="border-color: #73733c; "> <a href="courses.html" style="color: aliceblue;">Iniciar Secion</a></button>
         
       </div>
     </div>
